quick fix for .full div styling alignment on mobile

--- a/theme/styles/responsive.css
+++ b/theme/styles/responsive.css
@@ -60,6 +60,10 @@
 	    margin: 0 0 16px 0;
 	}
 
+	.full {
+		margin: 0;
+	}
+
 	.side-bar {
 		padding: 0;
 		margin: 0;
